--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -39,6 +39,13 @@
       <main role="main" class="container">
         <div class="row">
           <div class="col-md-8">
+            {% if message  %}
+                {% for message in messages%}
+                    <div class="alert alert-{{message.tags}}">
+                        {{message}}
+                    </div>
+                {% endfor %}
+            {% endif %}
             {% block content %}{% endblock %}
           </div>
           <div class="col-md-4">
