--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -4,7 +4,7 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4"></legend>
+                <legend class="border-bottom mb-4">Join Today</legend>
                 {{form.as_p}}
             </fieldset>
             <div class="form-group">
@@ -12,7 +12,7 @@
             </div>
         </form>
         <div class="border-top pt-3">
-            <small class="text-muted">Already have an account?<a class="ml-2">Sign in</a></small>
+            <small class="text-muted">Already have an account?<a class="ml-2" href="#">Sign in</a></small>
         </div>
     </div>
 {%endblock content%}
