--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -39,7 +39,7 @@
       <main role="main" class="container">
         <div class="row">
           <div class="col-md-8">
-            {% if message  %}
+            {% if messages %}
                 {% for message in messages%}
                     <div class="alert alert-{{message.tags}}">
                         {{message}}
