added login,logout,register and profile to functions

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,7 +18,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'blog-home'%}">Django Blog</a>
+            <a class="navbar-brand mr-4" href="{% url 'blog-home'%}">Ngeti Blog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -29,9 +29,14 @@
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#">Login</a>
-                <a class="nav-item nav-link" href="#">Register</a>
-              </div>
+                {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'profile'%}">Profile</a>
+                    <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
+                {% else %}
+                <a class="nav-item nav-link" href="{% url 'login'%}">Login</a>
+                <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>
+                {% endif %}
+            </div>
             </div>
           </div>
         </nav>
