--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,16 +5,15 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+                <legend class="border-bottom mb-4">Login</legend>
                 {{form|crispy}}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
         </form>
         <div class="border-top pt-3">
-            <small class="text-muted">Already have an account?<a class="ml-2" href="{%url 'login'%}">Sign in</a></small>
+            <small class="text-muted">Don`t have an account?<a class="ml-2" href="{%url 'register' %}">Sign up Now</a></small>
         </div>
     </div>
 {%endblock content%}
-    
