--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -12,7 +12,7 @@
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+                <legend class="border-bottom mb-4">Profile Info</legend>
                 {{u_form|crispy}}
                 {{p_form|crispy}}
             </fieldset>
