--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,4 +1,4 @@
-{% extends  "blog/base.html"%}
+{% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
@@ -6,15 +6,17 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
-                {{form|crispy}}
+                {{ form|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Sign Up</button>
             </div>
         </form>
         <div class="border-top pt-3">
-            <small class="text-muted">Already have an account?<a class="ml-2" href="{%url 'login'%}">Sign in</a></small>
+            <small class="text-muted">
+                Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+            </small>
         </div>
     </div>
-{%endblock content%}
+{% endblock content %}
     
