--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,12 +1,10 @@
 {% extends  "blog/base.html"%}
-
 {% block content %}
-    <div class="content-section">
-        <h2>You have been Logged out</h2>
-        <div class="border-top pt-3">
-            <small class="text-muted"><a  href="{%url 'login'%}">Log in again</a></small>
-        </div>
+    <h2>You have been logged out</h2>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            <a href="{% url 'login' %}">Log In Again</a>
+        </small>
     </div>
-{%endblock content%}  
-    
+{% endblock content %}  
 
