--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -30,8 +30,9 @@
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
                 {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'post-create'%}">New Post</a>
                 <a class="nav-item nav-link" href="{% url 'profile'%}">Profile</a>
-                    <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
+                <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
                 {% else %}
                 <a class="nav-item nav-link" href="{% url 'login'%}">Login</a>
                 <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>
