--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -13,16 +13,18 @@
             <small class="text-muted">{{ post.date_posted|date:'F d, Y' }}</small>
           </div>
           <h2><a class="article-title" href="{% url 'post-detail' post.id%}">{{ post.title }}</a></h2>
-          <p class="article-content">{{ post.content }}</p>
-          <h6><div class="icons" >
+          <div class="post">
+            <p class="article-content">{{ post.content }} Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+               Repellendus, neque? Expedita veniam earum deleniti molestias ducimus impedit ipsa necessitatibus pariatur nihil id repellendus, deserunt consectetur, corporis aut vitae totam unde. </p>
+            <button onclick="readMore(this)" style="cursor:pointer;">Read More</button>
+          </div>
+          
+          <h6 style="cursor:pointer;"><div class="icons" >
           <i class="fa bi bi-hand-thumbs-up" onclick="thumbsupClick(this)">Like</i>
           <i class="fa bi bi-hand-thumbs-down">Dislike</i> 
           <i class="fa bi bi-chat-left-dots">Comment</i>
-          <script >
-            thumbsupClick=(icon)=>{
-              icon.classList.toggle('fa bi bi-hand-thumbs-up-fill')
-          }
-          </script>
+           
+          
         </div></h6>
         </div>
        
