--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -56,7 +56,7 @@
             {% endif %}
             {% block content %}{% endblock %}
           </div>
-          <!-- <div class="col-md-4">
+          <div class="col-md-4">
             <div class="content-section">
               <h3>Our Sidebar</h3>
               <p class='text-muted'>You can put any information here you'd like.
@@ -68,7 +68,7 @@
                 </ul>
               </p>
             </div>
-          </div> -->
+          </div>
         </div>
       </main>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
