--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -14,8 +14,7 @@
           </div>
           <h2><a class="article-title" href="{% url 'post-detail' post.id%}">{{ post.title }}</a></h2>
           <div class="post">
-            <p class="article-content">{{ post.content }} Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-               Repellendus, neque? Expedita veniam earum deleniti molestias ducimus impedit ipsa necessitatibus pariatur nihil id repellendus, deserunt consectetur, corporis aut vitae totam unde. </p>
+            <p class="article-content">{{ post.content }} 
             <button onclick="readMore(this)" style="cursor:pointer;">Read More</button>
           </div>
           
